--- a/Sp5VueEx/src/main/webapp/WEB-INF/web.xml
+++ b/Sp5VueEx/src/main/webapp/WEB-INF/web.xml
@@ -8,7 +8,10 @@
     
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/spring/root-context.xml</param-value>
+		<param-value>
+			/WEB-INF/spring/root-context.xml,
+			/WEB-INF/spring/database/database-context.xml,
+		</param-value>
 	</context-param>
 	
 	<listener>
@@ -20,7 +23,11 @@
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>/WEB-INF/spring/appServlet/servlet-context.xml</param-value>
+			<param-value>
+				/WEB-INF/spring/appServlet/servlet-context.xml,
+				/WEB-INF/spring/database/transaction-context.xml,
+				/WEB-INF/spring/interceptor/interceptor-context.xml
+			</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
