--- a/Sp5VueEx/src/main/webapp/WEB-INF/web.xml
+++ b/Sp5VueEx/src/main/webapp/WEB-INF/web.xml
@@ -10,7 +10,7 @@
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
 			/WEB-INF/spring/root-context.xml,
-			/WEB-INF/spring/database/database-context.xml,
+			/WEB-INF/spring/database/database-context.xml
 		</param-value>
 	</context-param>
 	
