--- a/Sp5VueEx/src/main/webapp/resources/package.json
+++ b/Sp5VueEx/src/main/webapp/resources/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "vue": "^2.5.11",
+    "vue-i18n": "^8.18.0",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
