--- a/Sp5VueEx/src/main/webapp/resources/package.json
+++ b/Sp5VueEx/src/main/webapp/resources/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "babel-polyfill": "^6.26.0",
+    "bluebird": "^3.7.2",
+    "es6-promise": "^4.2.8",
     "vue": "^2.5.11",
     "vue-i18n": "^8.18.0",
     "vue-router": "^3.2.0",
